--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="resources/favicon.svg" rel="icon" type="image/svg+xml" />
+    <link href="public/favicon.svg" rel="icon" type="image/svg+xml" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Vite App</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="/src/main.tsx" type="module"></script>
+    <script src="/src/app/main.tsx" type="module"></script>
   </body>
 </html>
